--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
@@ -68,4 +71,12 @@ dependencies {
     def activity_version = "1.2.3"
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation "androidx.activity:activity-ktx:$activity_version"
+
+    //segment-control
+    compile 'info.hoang8f:android-segmented:1.0.6'
+
+    //bottom sheet
+    implementation 'com.google.android.material:material:1.3.0-alpha01'
+
+
 }
