--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,18 @@ plugins {
     id 'kotlin-android'
 }
 
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.example.nhkprogramapi"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -76,7 +81,8 @@ dependencies {
     compile 'info.hoang8f:android-segmented:1.0.6'
 
     //bottom sheet
-    implementation 'com.google.android.material:material:1.3.0-alpha01'
+    implementation 'com.google.android.material:material:1.4.0'
+
 
 
 }
