--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,8 +74,10 @@ dependencies {
 
     //viewModel
     def activity_version = "1.2.3"
+    def fragment_version = "1.3.5"
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation "androidx.activity:activity-ktx:$activity_version"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
     //segment-control
     compile 'info.hoang8f:android-segmented:1.0.6'
