--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.nhkprogramapi"
+        applicationId "com.nhk.nhkprogramapi"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
