--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,13 @@ dependencies {
     //bottom sheet
     implementation 'com.google.android.material:material:1.4.0'
 
+    //折りたたみ可能CardView
+//    implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
+//    implementation 'com.github.cachapa:ExpandableLayout:2.9.2'
 
+    implementation 'com.github.aakira:expandable-layout:1.6.0@aar'
+
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation "androidx.cardview:cardview:1.0.0"
 
 }
